--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.acme</groupId>
-    <artifactId>jms-quickstart</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <artifactId>jms-quickstart-producer</artifactId>
+    <version>1.0.0</version>
     <properties>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
