--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 quarkus.artemis.url=tcp://localhost:61616
 quarkus.artemis.username=artemis
 quarkus.artemis.password=simetraehcapa
+quarkus.http.port=8081
 
 # No authentication for test
 %test.quarkus.artemis.username=
